--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,7 @@
 project(cmake-extras)
 cmake_minimum_required(VERSION 2.8.9)
 
-file(
-  GLOB_RECURSE SRC_FILES
-  "src/*.cmake"
-  "src/*.in"
-)
-
 install(
-  FILES ${SRC_FILES}
+  DIRECTORY "src/"
   DESTINATION "${CMAKE_ROOT}/Modules/"
 )
