in FormatCode, use CMakeParseArguments intead of global variables

--- a/src/formatcode/formatcode_test.cmake.in
+++ b/src/formatcode/formatcode_test.cmake.in
@@ -19,11 +19,21 @@
 set(CMAKE_BINARY_DIR @CMAKE_BINARY_DIR@)
 set(CMAKE_SOURCE_DIR @CMAKE_SOURCE_DIR@)
 
-set(FORMATCODE_ASTYLE_CONFIG @FORMATCODE_ASTYLE_CONFIG@)
-set(FORMATCODE_CLANG_FORMAT_CONFIG @FORMATCODE_CLANG_FORMAT_CONFIG@)
-set(FORMATCODE_SOURCES @FORMATCODE_SOURCES@)
+set(FC_ASTYLE @FC_ASTYLE@)
+set(FC_ASTYLE_CONFIG @FC_ASTYLE_CONFIG@)
+set(FC_DOS2UNIX @FC_DOS2UNIX@)
+set(FC_CFORMAT @FC_CFORMAT@)
+set(FC_CFORMAT_CONFIG @FC_CFORMAT_CONFIG@)
+set(FC_SOURCES @FC_SOURCES@)
 
-include(@FORMATCODE_CMAKE_MODULE_DIR@/formatcode_common.cmake)
+include(@FC_CMAKE_MODULE_DIR@/formatcode_common.cmake)
 
-formatcode_test_files("${FORMATCODE_SOURCES}")
+formatcode_test_files(
+    "${FC_ASTYLE}"
+    "${FC_ASTYLE_CONFIG}"
+    "${FC_DOS2UNIX}"
+    "${FC_CFORMAT}"
+    "${FC_CFORMAT_CONFIG}"
+    "${FC_SOURCES}"
+)
 
