--- a/src/formatcode/formatcode_format.cmake.in
+++ b/src/formatcode/formatcode_format.cmake.in
@@ -21,7 +21,7 @@ set(CMAKE_SOURCE_DIR @CMAKE_SOURCE_DIR@)
 
 set(FC_ASTYLE @FC_ASTYLE@)
 set(FC_ASTYLE_CONFIG @FC_ASTYLE_CONFIG@)
-set(FC_DOS2UNIX @FC_DOS2UNIX@)
+set(FC_SED @FC_SED@)
 set(FC_CFORMAT @FC_CFORMAT@)
 set(FC_CFORMAT_CONFIG @FC_CFORMAT_CONFIG@)
 set(FC_SOURCES @FC_SOURCES@)
@@ -31,7 +31,7 @@ include(@FC_CMAKE_MODULE_DIR@/formatcode_common.cmake)
 formatcode_format_files(
     "${FC_ASTYLE}"
     "${FC_ASTYLE_CONFIG}"
-    "${FC_DOS2UNIX}"
+    "${FC_SED}"
     "${FC_CFORMAT}"
     "${FC_CFORMAT_CONFIG}"
     "${FC_SOURCES}"
