--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ cmake_minimum_required(VERSION 2.8.9)
 install(
   DIRECTORY "src/"
   DESTINATION "${CMAKE_ROOT}/Modules/"
+  USE_SOURCE_PERMISSIONS 
 )
