updat the 'make formatcode' rule and formatcode test to use the new filter

--- a/src/formatcode/formatcode_format.cmake.in
+++ b/src/formatcode/formatcode_format.cmake.in
@@ -19,19 +19,13 @@
 set(CMAKE_BINARY_DIR @CMAKE_BINARY_DIR@)
 set(CMAKE_SOURCE_DIR @CMAKE_SOURCE_DIR@)
 
-set(FC_ASTYLE @FC_ASTYLE@)
-set(FC_ASTYLE_CONFIG @FC_ASTYLE_CONFIG@)
-set(FC_CFORMAT @FC_CFORMAT@)
-set(FC_CFORMAT_CONFIG @FC_CFORMAT_CONFIG@)
+set(FC_COMMAND @FC_COMMAND@)
 set(FC_SOURCES @FC_SOURCES@)
 
 include(@FC_CMAKE_MODULE_DIR@/formatcode_common.cmake)
 
 formatcode_format_files(
-    "${FC_ASTYLE}"
-    "${FC_ASTYLE_CONFIG}"
-    "${FC_CFORMAT}"
-    "${FC_CFORMAT_CONFIG}"
+    "${FC_COMMAND}"
     "${FC_SOURCES}"
 )
 
