Copyright test. Still need two levels of escaping for regex meta characters.

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,9 @@ Vcs-Bzr: lp:cmake-extras
 Package: cmake-extras
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}, cmake (>= ${cmake:Version}), cmake (<< ${cmake:nextMajor})
+Depends: ${misc:Depends},
+         cmake (>= ${cmake:Version}),
+         cmake (<< ${cmake:nextMajor}),
+         licensecheck | devscripts (<< 2.16.6),
 Description: Extra CMake utility modules.
- Includes coverage modules.
+ Modules for coverage testing, building gtest, generating doxygen documentation, and more.
