Added one more test.

--- a/examples/copyrighttest-demo/CMakeLists.txt
+++ b/examples/copyrighttest-demo/CMakeLists.txt
@@ -22,6 +22,14 @@ add_copyright_test(
 add_copyright_test(
     SOURCE_DIR ${CMAKE_SOURCE_DIR}
     IGNORE_DIR ${CMAKE_BINARY_DIR}
+    INCLUDE_PATTERN \\.cpp|\\.h$
+    IGNORE_PATTERN no_copyright\\.h$
+    TEST_NAME must_fail_3
+)
+
+add_copyright_test(
+    SOURCE_DIR ${CMAKE_SOURCE_DIR}
+    IGNORE_DIR ${CMAKE_BINARY_DIR}
     IGNORE_PATTERN no_copyright
     TEST_NAME must_succeed_1
 )
