Separate deps for autopkg tests.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,8 +1,16 @@
-Tests: findgmock copyrighttest
+Tests: findgmock
 Restrictions: allow-stderr
 Depends:
   build-essential,
   cmake,
   cmake-extras,
   googletest (>= 1.8.0) | google-mock,
+  licensecheck | devscripts (<< 2.16.6)
+
+Tests: copyrighttest
+Restrictions: allow-stderr
+Depends:
+  build-essential,
+  cmake,
+  cmake-extras,
   licensecheck | devscripts (<< 2.16.6)
