Adjustment for different behavior of licensecheck on xenial, where it won't look at CMakeLists.txt by default.

--- a/examples/copyrighttest-demo/CMakeLists.txt
+++ b/examples/copyrighttest-demo/CMakeLists.txt
@@ -51,7 +51,7 @@ add_copyright_test(
 
 add_copyright_test(
     SOURCE_DIR ${CMAKE_SOURCE_DIR}
-    IGNORE_PATTERN \\.h$|\\.cpp$
+    IGNORE_PATTERN \\.h$
     TEST_NAME must_fail_4
 )
 
