--- a/examples/gsettings-demo/generated.gschema.xml.in
+++ b/examples/gsettings-demo/generated.gschema.xml.in
@@ -1,7 +1,7 @@
 <schemalist>
   <schema id="com.canonical.cmake-extras.generated-test" path="/com/canonical/cmake-extras/generated-test/">
-    <key name="install-path" type="s">
-      <default>@CMAKE_INSTALL_FULL_DATADIR@</default>
+    <key name="install-id" type="s">
+      <default>@DEFAULT_UUID@</default>
       <summary>Just a test</summary>
       <description>No really, it's just a test.</description>
     </key>
