Ensure a target exists for gschema files. Add the validation as a test rather than a target.

--- a/examples/gsettings-demo/CMakeLists.txt
+++ b/examples/gsettings-demo/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
 project(intltool-demo)
 
+enable_testing()
+
 include(GNUInstallDirs)
 find_package(GSettings)
 
