--- a/examples/intltool-demo/src/translated.gschema.xml.in
+++ b/examples/intltool-demo/src/translated.gschema.xml.in
@@ -1,6 +1,6 @@
 <schemalist gettext-domain="intltool-demo">
-  <schema id="com.canonical.cmake-extras.static-test" path="/com/canonical/cmake-extras/static-test/">
-    <key name="use-gsettings" type="b">
+  <schema id="com.canonical.cmake-extras.translated-test" path="/com/canonical/cmake-extras/translated-test/">
+    <key name="translated" type="b">
       <default>false</default>
       <_summary>Just a test</_summary>
       <_description>No really, it's just a test.</_description>
