Append file globs rather than resetting the variable.

--- a/examples/intltool-demo/po/CMakeLists.txt
+++ b/examples/intltool-demo/po/CMakeLists.txt
@@ -4,7 +4,7 @@ intltool_update_potfile(
     POTFILES_TEMPLATE "POTFILES.in.in"
     GETTEXT_PACKAGE ${GETTEXT_PACKAGE}
     COPYRIGHT_HOLDER "Foocorp Ltd."
-    FILE_GLOBS "${CMAKE_SOURCE_DIR}/*.gschema.xml.in" "${CMAKE_SOURCE_DIR}/*.ini.in" "${CMAKE_SOURCE_DIR}/*.cpp" "${CMAKE_SOURCE_DIR}/*.h" "${CMAKE_SOURCE_DIR}/*.c"
+    FILE_GLOBS "${CMAKE_SOURCE_DIR}/*.gschema.xml.in"
     FILTER ".*test.*"
 )
 
