--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,4 @@
 #!/usr/bin/make -f
 %:
-	dh $@ --fail-missing
+	dh $@ --fail-missing --parallel
 
-CMAKE_VERSION=$(shell dpkg-query --show --showformat='$${version}' cmake | cut -f1,2 -d.)
-
-override_dh_gencontrol:
-	dh_gencontrol -- \
-		-Vcmake:Version=$(CMAKE_VERSION) -Vcmake:nextMajor=$(CMAKE_VERSION).z
